--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -22,6 +22,14 @@ jobs:
       - name: Download Flutter packages
         run: flutter pub get
 
+      # ls
+      - name: ls
+        run: ls
+
+      # pwd
+      - name: pwd
+        run: pwd
+
       - run: flutter build web
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
