--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -24,7 +24,7 @@ jobs:
 
       # ls
       - name: ls
-        run: ls
+        run: ls /home/runner/work/flutter_tenki/flutter_tenki/flutter/dev/docs/firebase.json
 
       # pwd
       - name: pwd
