--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.tenki" "\0"
-            VALUE "FileDescription", "flutter_tenki" "\0"
+            VALUE "CompanyName", "com.tsune10696.tenkiApp" "\0"
+            VALUE "FileDescription", "tenki_app" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutter_tenki" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.tenki. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flutter_tenki.exe" "\0"
-            VALUE "ProductName", "flutter_tenki" "\0"
+            VALUE "InternalName", "tenki_app" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 com.tsune10696.tenkiApp. All rights reserved." "\0"
+            VALUE "OriginalFilename", "tenki_app.exe" "\0"
+            VALUE "ProductName", "tenki_app" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
